# easy_flag

./: Cargo.toml  README.md
src/: lib.rs  var.rs
